--- a/apple.html
+++ b/apple.html
@@ -259,7 +259,145 @@
         width: 115px;
         height: 40px;
         border-radius: 20px;
+        border: none;
         background-color: rgba(0, 113, 227, 1);
+        padding: 10px 16pxs;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(255, 255, 255, 1);
+        margin-right: 16px;
+      }
+      .ipadair button:nth-child(2) {
+        width: 68px;
+        height: 40px;
+        border-radius: 20px;
+        border: 1px solid rgba(41, 151, 255, 1);
+        background-color: transparents;
+        padding: 10px 20px;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(41, 151, 255, 1);
+      }
+      .ipadair > div:nth-child(4) {
+        margin-top: 324px;
+        font-size: 14px;
+        line-height: 18px;
+        font-size: 500;
+        color: rgba(0, 144, 247, 1), rgba(186, 98, 252, 1),
+          rgba(242, 65, 107, 1), rgba(245, 86, 0, 1);
+      }
+      .airpodspro2 {
+        margin-top: 401px;
+      }
+      .airpodspro2 > div:nth-child(1) {
+        font-size: 36px;
+        line-height: 44px;
+        font-weight: 600;
+        color: rgba(245, 245, 247, 1);
+      }
+      .airpodspro2 > div:nth-child(2) {
+        font-size: 18px;
+        line-height: 25px;
+        color: rgba(245, 245, 247, 1);
+        margin-top: 2px;
+        margin-bottom: 10px;
+      }
+      .airpodspro2 button:nth-child(1) {
+        width: 115px;
+        height: 40px;
+        border-radius: 20px;
+        border: none;
+        background-color: rgba(0, 113, 227, 1);
+        padding: 10px 16px;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(255, 255, 255, 1);
+        margin-right: 16px;
+      }
+      .airpodspro2 button:nth-child(2) {
+        width: 68px;
+        height: 40px;
+        border-radius: 20px;
+        border: 1px solid rgba(41, 151, 255, 1);
+        background-color: transparent;
+        padding: 10px 20px;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(41, 151, 255, 1);
+      }
+      .watch {
+        padding-top: 58px;
+      }
+      .watch > div:nth-child(1) {
+        display: flex;
+        gap: 8px;
+        justify-content: center;
+        align-items: center;
+      }
+      .watch > div:nth-child(1) > div {
+        font-size: 32px;
+        line-height: 100%;
+        font-weight: 700;
+        color: rgba(0, 0, 0, 1);
+      }
+      .watch > div:nth-child(2) {
+        font-size: 15px;
+        line-height: 100%;
+        letter-spacing: 2px;
+        font-weight: 700;
+        color: rgba(0, 0, 0, 1);
+        margin: 4px 0;
+      }
+      .watch > div:nth-child(3) {
+        font-size: 18px;
+        line-height: 25px;
+        letter-spacing: 2px;
+        color: rgba(29, 29, 31, 1);
+        margin-bottom: 16px;
+      }
+      .watch button:nth-child(1) {
+        width: 115px;
+        height: 40px;
+        border-radius: 20px;
+        border: none;
+        background-color: rgba(0, 113, 227, 1);
+        padding: 10px 16px;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(255, 255, 255, 1);
+        margin-right: 16px;
+      }
+      .watch button:nth-child(2) {
+        width: 68px;
+        height: 40px;
+        border-radius: 20px;
+        border: 1px solid rgba(41, 151, 255, 1);
+        background-color: transparent;
+        padding: 10px 20px;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: -0.37px;
+        color: rgba(41, 151, 255, 1);
+      }
+      .macbookair {
+        margin-top: 48px;
+      }
+      .macbookair > div:nth-child(1) {
+        font-size: 36px;
+        line-height: 44px;
+        font-weight: 600;
+        color: rgba(29, 29, 31, 1);
+      }
+      .macbookair > div:nth-child(2) {
+      }
+      .macbookair button:nth-child(1) {
+      }
+      .macbookair button:nth-child(2) {
       }
     </style>
   </head>
@@ -347,6 +485,7 @@
               <div>Hello, Apple Intelligence.</div>
             </div>
           </div>
+
           <div class="s5-item">
             <div class="sec5-text airpodspro2">
               <div>AirPods Pro 2</div>
@@ -357,15 +496,17 @@
               </div>
             </div>
           </div>
+
           <div class="s5-item">
             <div class="sec5-text watch">
               <div>
-                <div>
-                  <img />
-                  <div>WATCH</div>
-                </div>
-                <div>SERIES 10</div>
+                <img
+                  src="image/s5.apple-vector.png"
+                  style="padding-bottom: 7px"
+                />
+                <div>WATCH</div>
               </div>
+              <div>SERIES 10</div>
               <div>Thinstant classic.</div>
               <div>
                 <button>Learn more</button>
