--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -4,15 +4,38 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header></header>
-    <section class="after-header">
-      <div class="text">
-        We’re donating $5 to the Global Fund for every purchase made with
-        Apple Pay at Apple. Through 12/8.
-      </div>
+    <!-- header -->
+    <header>
+      <a href="https://www.apple.com/">
+        <img src="image/h-apple-logo.png" />
+      </a>
+      <nav>
+        <a href="https://www.apple.com/">Store</a>
+        <a href="https://www.apple.com/">Mac</a>
+        <a href="https://www.apple.com/">iPad</a>
+        <a href="https://www.apple.com/">iPhone</a>
+        <a href="https://www.apple.com/">Watch</a>
+        <a href="https://www.apple.com/">Vision</a>
+        <a href="https://www.apple.com/">Airpods</a>
+        <a href="https://www.apple.com/">TV & Home</a>
+        <a href="https://www.apple.com/">Entertainment</a>
+        <a href="https://www.apple.com/">Accessories</a>
+        <a href="https://www.apple.com/">Support</a>
+      </nav>
+      <button></button>
+      <button></button>
+    </header>
+
+    <!-- products -->
+    <section class="products">
+      <div class="products-item ipadair"></div>
+      <div class="products-item airpodpro"></div>
+      <div class="products-item watch"></div>
+      <div class="products-item macbookair"></div>
+      <div class="products-item smallbuiness"></div>
+      <div class="products-item carrierdeals"></div>
+      <div class="products-item tradein"></div>
+      <div class="products-item card"></div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
   </body>
 </html>
