--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -6,9 +6,7 @@
   <body>
     <!-- header -->
     <header>
-      <a href="https://www.apple.com/">
-        <img src="image/h-apple-logo.png" />
-      </a>
+      <a href="https://www.apple.com/"> </a>
       <nav>
         <a href="https://www.apple.com/">Store</a>
         <a href="https://www.apple.com/">Mac</a>
@@ -24,7 +22,49 @@
       </nav>
       <button></button>
       <button></button>
+      <button></button>
     </header>
+
+    <!-- donate -->
+    <section class="donate-banner">
+      <div>
+        We’re donating $5 to the Global Fund for every purchase made with
+        Apple Pay at Apple. Through 12/8.
+      </div>
+    </section>
+
+    <!-- iphone16pro -->
+    <section class="iphone16pro">
+      <div class="iphone16pro-text">
+        <div>iPhone 16 Pro</div>
+        <div>Hello, Apple Intelligence.</div>
+        <div>
+          <button>Learn more</button>
+          <button>Buy</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- iphone16 -->
+    <section class="iphone16">
+      <div class="iphone16-text">
+        <div>iPhone 16</div>
+        <div>Hello, Apple Intelligence.</div>
+        <div>
+          <button>Learn more</button>
+          <button>Buy</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- gift magic -->
+    <section class="giftmagic">
+      <div class="giftmagic-text">
+        <div>Gift magic.</div>
+        <div>Make their holiday wish come true.</div>
+        <button>Shop gifts</button>
+      </div>
+    </section>
 
     <!-- products -->
     <section class="products">
