til-did-ipadair
need-to review-other version

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -68,13 +68,38 @@
 
     <!-- products -->
     <section class="products">
-      <div class="products-item ipadair"></div>
+      <!-- ipadair -->
+      <div class="products-item">
+        <div class="ipadair-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
+
+      <!-- airpodpro -->
       <div class="products-item airpodpro"></div>
+
+      <!-- watch -->
       <div class="products-item watch"></div>
+
+      <!-- macbookair -->
       <div class="products-item macbookair"></div>
+
+      <!-- smallbuiness -->
       <div class="products-item smallbuiness"></div>
+
+      <!-- carrierdeals -->
       <div class="products-item carrierdeals"></div>
+
+      <!-- tradein -->
       <div class="products-item tradein"></div>
+
+      <!-- card -->
       <div class="products-item card"></div>
     </section>
   </body>
