airpod-oos ehelj hih

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -82,25 +82,95 @@
       </div>
 
       <!-- airpodpro -->
-      <div class="products-item airpodpro"></div>
+      <div class="products-item">
+        <div class="airpodpro-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- watch -->
-      <div class="products-item watch"></div>
+      <div class="products-item">
+        <div class="watch-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- macbookair -->
-      <div class="products-item macbookair"></div>
+      <div class="products-item">
+        <div class="macbookair-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- smallbuiness -->
-      <div class="products-item smallbuiness"></div>
+      <div class="products-item">
+        <div class="smallbuiness-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- carrierdeals -->
-      <div class="products-item carrierdeals"></div>
+      <div class="products-item">
+        <div class="carrierdeals-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- tradein -->
-      <div class="products-item tradein"></div>
+      <div class="products-item">
+        <div class="tradein-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
 
       <!-- card -->
-      <div class="products-item card"></div>
+      <div class="products-item card">
+        <div class="card-text">
+          <div></div>
+          <div>Two sizes. Faster chip. Does it all.</div>
+          <div>
+            <button>Learn more</button>
+            <button>Buy</button>
+          </div>
+          <div>Hello, Apple Intelligence.</div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
