--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -175,53 +175,17 @@
 
     <!-- scroll -->
     <section class="movielinkscroller">
-      <div>
-        <div class="slide-container">
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="slide">
-            <div></div>
-            <div></div>
-          </div>
-        </div>
+      <div class="slide-container">
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
+        <div class="slide"></div>
       </div>
     </section>
   </body>
