img-realsize-added

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -173,8 +173,8 @@
       </div>
     </section>
 
-    <!-- scroll -->
-    <section class="movielinkscroller">
+    <!-- movie scroll -->
+    <section class="movie-link-scroller">
       <div class="slide-container">
         <div class="slide"></div>
         <div class="slide"></div>
@@ -186,6 +186,30 @@
         <div class="slide"></div>
         <div class="slide"></div>
         <div class="slide"></div>
+      </div>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </section>
+
+    <!-- content scroll -->
+    <section class="content-link-scroller">
+      <div class="flow-container">
+        <div class="flow"></div>
+        <div class="flow"></div>
+        <div class="flow"></div>
+        <div class="flow"></div>
+        <div class="flow"></div>
+        <div class="flow"></div>
       </div>
     </section>
   </body>
