new page-store added

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -201,6 +201,23 @@
       </ul>
     </section>
 
+    <!-- movie scroller redo -->
+    <section>
+      <div class="bigbox">
+        <div class="boxcontscrol">
+          <div class="boxslide-contain">
+            <div class="boxslide"></div>
+            <div class="boxslide"></div>
+            <div class="boxslide"></div>
+            <div class="boxslide"></div>
+            <div class="boxslide"></div>
+            <div class="boxslide"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- movie scroller redo -->
+
     <!-- content scroll -->
     <section class="content-link-scroller">
       <div class="flow-container">
