background-g img ruu

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
@@ -177,6 +183,14 @@
     <section class="movie-link-scroller">
       <div class="slide-container">
         <div class="slide"></div>
+        <div class="slide">
+          <div class="slide__content">
+            <button class="slide__button">Stream now</button>
+            <div class="slide__text">
+              <span>Comedy</span> · Will they make history…or fake it?
+            </div>
+          </div>
+        </div>
         <div class="slide"></div>
         <div class="slide"></div>
         <div class="slide"></div>
@@ -201,22 +215,7 @@
       </ul>
     </section>
 
-    <!-- movie scroller redo -->
-    <section>
-      <div class="bigbox">
-        <div class="boxcontscrol">
-          <div class="boxslide-contain">
-            <div class="boxslide"></div>
-            <div class="boxslide"></div>
-            <div class="boxslide"></div>
-            <div class="boxslide"></div>
-            <div class="boxslide"></div>
-            <div class="boxslide"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- movie scroller redo -->
+    <!-- movie scroll redo -->
 
     <!-- content scroll -->
     <section class="content-link-scroller">
@@ -226,7 +225,14 @@
         <div class="flow"></div>
         <div class="flow"></div>
         <div class="flow"></div>
-        <div class="flow"></div>
+      </div>
+    </section>
+
+    <!-- content scroll redo -->
+    <section>
+      <div class="flow">
+        <img src="image/flow1.png" class="flow-img" />
+        <div class="flow-text">Improve Your Posture wicth Pilates</div>
       </div>
     </section>
   </body>
