after black out save

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -230,9 +230,9 @@
 
     <!-- content scroll redo -->
     <section>
-      <div class="flow">
-        <img src="image/flow1.png" class="flow-img" />
-        <div class="flow-text">Improve Your Posture wicth Pilates</div>
+      <div class="flows">
+        <img src="image/flow1.png" class="flows-img" />
+        <div class="flows-text">Improve Your Posture wicth Pilates</div>
       </div>
     </section>
   </body>
