--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -218,21 +218,28 @@
     <!-- movie scroll redo -->
 
     <!-- content scroll -->
-    <section class="content-link-scroller">
-      <div class="flow-container">
-        <div class="flow"></div>
-        <div class="flow"></div>
-        <div class="flow"></div>
-        <div class="flow"></div>
-        <div class="flow"></div>
-      </div>
-    </section>
-
-    <!-- content scroll redo -->
     <section>
-      <div class="flows">
-        <img src="image/flow1.png" class="flows-img" />
-        <div class="flows-text">Improve Your Posture wicth Pilates</div>
+      <div class="apple-content">
+        <div class="apple-content__flows pilates">
+          <img src="images/pilates.png" class="pilates__img" />
+          <div class="pilates__info">Improve Your Posture wicth Pilates</div>
+        </div>
+        <div class="apple-content__flows randb">
+          <img src="images/randb.png" class="randb__img" />
+          <div class="randb__info">R&B Now</div>
+        </div>
+        <div class="apple-content__flows nba">
+          <img src="images/nba.png" class="nba__img" />
+          <div class="nba__info">NBA 2K25 Arcade Edition</div>
+        </div>
+        <div class="apple-content__flows strength">
+          <img src="images/fitness2.png" class="strength__img" />
+          <div class="strength__info">Strength with Kim</div>
+        </div>
+        <div class="apple-content__flows alternative">
+          <img src="images/alternative.jpg" class="alternative__img" />
+          <div class="alternative__info"></div>
+        </div>
       </div>
     </section>
   </body>
