scroll slide big pic

--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -215,30 +216,124 @@
       </ul>
     </section>
 
+    <!-- neww -->
     <!-- movie scroll redo -->
+    <section>
+      <div class="a-movies-container">
+        <div class="a-movies">
+          <div class="a-movie mov1">
+            <img src="images/mov1.jpg" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+          <div class="a-movie mov2">
+            <img src="images/mov2.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre">
+                <span>Comedy</span> · Will they make history…or fake it?
+              </div>
+            </div>
+          </div>
+          <div class="a-movie mov3">
+            <img src="images/mov3.jpg" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+          <div class="a-movie mov4">
+            <img src="images/mov4.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre">
+                Drama · Saoirse Ronan stars in a wartime family epic from
+                director Steve McQueen.
+              </div>
+            </div>
+          </div>
+          <div class="a-movie mov5">
+            <img src="images/mov5.jpg" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre"></div>
+            </div>
+          </div>
+          <div class="a-movie mov6">
+            <img src="images/mov6.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre">history</div>
+            </div>
+          </div>
+          <div class="a-movie mov7">
+            <img src="images/mov7.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre">…</div>
+            </div>
+          </div>
+          <div class="a-movie mov8">
+            <img src="images/mov8.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>
+              <div class="genre">or</div>
+            </div>
+          </div>
+          <div class="a-movie mov9">
+            <img src="images/mov9.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>>
+              <div class="genre">fake</div>
+            </div>
+          </div>
+          <div class="a-movie mov10">
+            <img src="images/mov10.png" class="a-movie__img" />
+            <div class="a-movie__text">
+              <button>Stream now</button>>
+              <div class="genre">it?</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- content scroll -->
     <section>
-      <div class="apple-content">
-        <div class="apple-content__flows pilates">
-          <img src="images/pilates.png" class="pilates__img" />
-          <div class="pilates__info">Improve Your Posture wicth Pilates</div>
-        </div>
-        <div class="apple-content__flows randb">
-          <img src="images/randb.png" class="randb__img" />
-          <div class="randb__info">R&B Now</div>
-        </div>
-        <div class="apple-content__flows nba">
-          <img src="images/nba.png" class="nba__img" />
-          <div class="nba__info">NBA 2K25 Arcade Edition</div>
-        </div>
-        <div class="apple-content__flows strength">
-          <img src="images/fitness2.png" class="strength__img" />
-          <div class="strength__info">Strength with Kim</div>
-        </div>
-        <div class="apple-content__flows alternative">
-          <img src="images/alternative.jpg" class="alternative__img" />
-          <div class="alternative__info"></div>
+      <div class="a-contents-container">
+        <div class="a-contents">
+          <div class="a-content">
+            <img src="images/pilates.png" class="a-content__img" />
+            <div class="a-content__text pilates">
+              Improve Your Posture wicth Pilates
+            </div>
+          </div>
+          <div class="a-content">
+            <img src="images/randb.png" class="a-content__img" />
+            <div class="a-content__text randb">R&B Now</div>
+          </div>
+          <div class="a-content">
+            <img src="images/nba.png" class="a-content__img" />
+            <div class="a-content__text nba">NBA 2K25 Arcade Edition</div>
+          </div>
+          <div class="a-content">
+            <img src="images/strength.png" class="a-content__img" />
+            <div class="a-content__text strength">Strength with Kim</div>
+          </div>
+          <div class="a-content">
+            <img src="images/alternative.jpg" class="a-content__img" />
+            <div class="a-content__text alternative"></div>
+          </div>
+          <div class="a-content">
+            <img src="images/laoficial.png" class="a-content__img" />
+            <div class="a-content__text laoficial">La Oficial</div>
+          </div>
+          <div class="a-content">
+            <img src="images/travel.jpg" class="a-content__img" />
+            <div class="a-content__text travel">Travel-Friendly Workouts</div>
+          </div>
         </div>
       </div>
     </section>
