--- a/apple-new6.24.html
+++ b/apple-new6.24.html
@@ -249,8 +249,8 @@
             <div class="a-movie__text">
               <button>Stream now</button>
               <div class="genre">
-                Drama · Saoirse Ronan stars in a wartime family epic from
-                director Steve McQueen.
+                <span>Drama</span> · Saoirse Ronan stars in a wartime family
+                epic from director Steve McQueen.
               </div>
             </div>
           </div>
@@ -298,6 +298,18 @@
           </div>
         </div>
       </div>
+      <ul class="dotbox">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
     </section>
 
     <!-- content scroll -->
