--- a/apple-last-ver.html
+++ b/apple-last-ver.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="applemain.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,6 +13,41 @@
     <title>Document</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <header class="header-container">
+        <a href="https://www.apple.com/" class="header-logo"></a>
+        <nav class="nav-menu">
+          <a href="https://www.apple.com/" class="nav-menu__item">Store</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">Mac</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">iPad</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">iPhone</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">Watch</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">Vision</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">Airpods</a>
+          <a href="https://www.apple.com/" class="nav-menu__item">TV & Home</a>
+          <a href="https://www.apple.com/" class="nav-menu__item"
+            >Entertainment</a
+          >
+          <a href="https://www.apple.com/" class="nav-menu__item"
+            >Accessories</a
+          >
+          <a href="https://www.apple.com/" class="nav-menu__item"
+            >Accessories</a
+          >
+        </nav>
+        <div class="header-buttons">
+          <button class="header-button search"></button>
+          <button class="header-button bag"></button>
+          <button class="header-button more"></button>
+        </div>
+      </header>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
   </body>
 </html>
